--- a/style.css
+++ b/style.css
@@ -58,13 +58,15 @@ p {
 }
 
 .logo p {
-    font-size: 23px;
+    font-size: 25px;
     font-weight: bold;
 
     @media (max-width:700px) {
         font-size: 18px;
     }
 }
+
+
 
 .options {
     display: flex;
@@ -612,59 +614,212 @@ p {
     
 }
 
+
 .footer{
+    display:flex;
     width: 100%;
-    display: flex;
+    padding: 0% 10%;
+    box-sizing: border-box;
     align-items: flex-start;
     justify-content: space-around;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 5% 10%;
-    background-color:#191919;
-    margin: auto;
-    overflow: hidden;
-    position: relative;
+    margin-bottom: 30px;
+    background-color: rgba(210, 230, 232, 0.484);
+    padding-top: 30px;
+    margin-bottom: 0px;
+  
+
 }
 
-.yellowcircle{
-    background-color: yellow;
-    height: 100px;
+.footer img{
     width: 100px;
-    border-radius: 50%;
-    position: absolute;
-    top: -58px;
-    left: 13%;
-    opacity: 0.2;
 }
 
-.footer p:nth-child(2){
-    color: rgb(190, 173, 173);
-    font-size: 19px;
-    margin-bottom: 30px;
+.footer div{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    row-gap: 5px;
+    padding-bottom: 20px;
 }
 
-.footer p:nth-child(3){
-    color: rgb(255, 255, 255);
-    font-size: 25px;
-    margin-bottom: 30px;
+.footer div P{
+    color: rgba(120, 102, 102, 0.833);
+    font-size: 13px;
 }
+
+.footer div P:nth-child(1){
+    font-weight: bold;
+    font-size: 15px;
+    margin-bottom: 20px;
+    color: rgb(8, 11, 8);
+   
+
+}
+
+.footer .logodiv{
+    justify-content: center !important;
+    align-items: center !important;
+
+}
+
+
+
+
 
 @media (max-width:900px) {
-
-    .yellowcircle{
-        width: 87px;
-        height: 83px;
-        top:-60px;
-        left: 100px;
-        opacity: 1;
-        
-    }
-    .footer p:nth-child(2){
-       margin-top: 30px;
-       font-size: 14px;
+    .footer{
+        flex-direction: column;
+        row-gap: 20px;
+        padding: 5% 5%;
     }
 
-    .footer p:nth-child(3){
-       font-size: 20px;
+    .footer img{
+        width: 70px;
     }
+}
+
+@media (max-width:500px) {
+    .footer{
+        width: 100%;
+    }
+
+    .footer div P{
+        color: rgba(120, 102, 102, 0.833);
+        font-size: 11px;
+        margin-bottom: 0px;
+    }
+    
+    .footer div P:nth-child(1){
+        font-weight: bold;
+        font-size: 13px;
+        margin-bottom: 20px;
+        color: rgb(8, 11, 8);
+       
+    
+    }
+}
+
+.icons{
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+    flex-direction: row !important;
+}
+
+.icons img{
+    width: 20px;
+}
+
+
+span{
+    color: rgb(247, 104, 52);
+}
+
+
+
+.logodiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 40px;
+}
+.logodiv p {
+    color: #1b3557 !important;
+   
+}
+.logodiv img {
+    width: 158px;
+    height: 90px;
+    object-fit: contain;
+}
+@media (max-width: 700px) {
+    .logodiv img {
+        width: 105px;
+        margin-bottom: -16px;
+   }
+}
+@media (max-width: 700px) {
+    .logodiv {
+        row-gap: 10px;
+   }
+}
+.logodiv p {
+    font-size: 23px;
+    font-weight: 600;
+    text-align: center;
+}
+@media (max-width: 700px) {
+    .logodiv p {
+        font-size: 17px;
+   }
+}
+.logodiv p span {
+    color: red;
+}
+.logodiv P:nth-child(2) {
+    font-weight: 500;
+    color: gray;
+    font-size: 16px;
+}
+
+.love {
+    width: 100%;
+    background-color:#e9f3f4;
+    padding-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-top: 1px solid rgba(0, 0, 0, 0.427);
+    padding-top: 20px;
+}
+@media (max-width: 884px) {
+    .love {
+        flex-direction: column;
+        row-gap: 20px;
+   }
+}
+.love .logodiv p {
+    font-weight: 500;
+    text-align: center;
+    font-size: 16px;
+    color: #000;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.love a {
+    color: red;
+    text-decoration: none;
+}
+.love p {
+    text-align: center;
+    padding: 0px 12px;
+
+}
+@media (max-width: 600px) {
+    .love p {
+        font-size: 13px !important;
+   }
+}
+.love .socialicons {
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    column-gap: 10px;
+}
+.love .socialicons img {
+    width: 20px;
+    height: 20px;
+}
+@media (max-width: 600px) {
+    .love .socialicons img {
+        width: 17px;
+        height: 17px;
+   }
+}
+.love .socialicons a {
+    margin-top: 10px;
 }
